timeline overflow fix

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -57,9 +57,9 @@ html {
   color: var(--primary-color);
   background-color: var(--background-color);
 }
+
 body {
   width: 100%;
-  overflow: scroll;
 }
 
 #app {
